tests/ui/function_not_found.stderr
error: function `f` is not found in this scope
   --> function_not_found.ray:4:5
    |
 LL |     f();
    |     ^^^ not found in this scope

